Add NGRX Store as feature Add User Example

--- a/webapp/src/app/modules/users/components/user/user.component.html
+++ b/webapp/src/app/modules/users/components/user/user.component.html
@@ -6,14 +6,14 @@
     hover:shadow-none
     relative
     flex flex-col
-    rounded-xl
+    rounded
     mx-auto
     shadow-lg
     m-5
   "
 >
   <img
-    class="max-h-20 w-full opacity-80 absolute top-0 rounded-t-xl"
+    class="max-h-20 w-full opacity-80 absolute top-0 rounded-t"
     style="z-index: -1"
     [src]="'https://picsum.photos/400/100?' + user.name"
     alt=""
@@ -45,20 +45,35 @@
       mr-3
     "
   >
-    <div
+    <button
       class="
-        add
-        border
-        rounded-2xl
-        border-gray-300
-        bg-red-700
-        p-1
-        px-4
-        cursor-pointer
-        hover:bg-red-400 hover:text-gray-300
+        border-2 border-transparent
+        bg-red-500
+        py-1
+        px-2
+        font-bold
+        uppercase
+        text-white
+        rounded
+        transition-all
+        hover:border-red-500 hover:bg-transparent hover:text-red-500
       "
+      (click)="removeUser()"
     >
-      Remove
-    </div>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+        />
+      </svg>
+    </button>
   </div>
 </div>
