--- a/webapp/src/app/modules/users/components/user-form/user-form.component.html
+++ b/webapp/src/app/modules/users/components/user-form/user-form.component.html
@@ -6,18 +6,7 @@
         <input
           type="text"
           formControlName="name"
-          class="
-            mt-1
-            block
-            w-full
-            rounded-md
-            border-gray-300
-            shadow-sm
-            focus:border-indigo-300
-            focus:ring
-            focus:ring-indigo-200
-            focus:ring-opacity-50
-          "
+          class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
           placeholder="Full Name"
         />
       </label>
@@ -25,18 +14,7 @@
         <span class="text-gray-700">Profession</span>
         <select
           formControlName="profession"
-          class="
-            block
-            w-full
-            mt-1
-            rounded-md
-            border-gray-300
-            shadow-sm
-            focus:border-indigo-300
-            focus:ring
-            focus:ring-indigo-200
-            focus:ring-opacity-50
-          "
+          class="block w-full mt-1 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"
         >
           <option>Frontend Developer</option>
           <option>Backend Developer</option>
@@ -46,21 +24,14 @@
       </label>
       <button
         (click)="addUser()"
-        class="
-          border-2 border-transparent
-          bg-blue-500
-          py-2
-          px-4
-          font-bold
-          uppercase
-          text-white
-          rounded
-          transition-all
-          hover:border-blue-500 hover:bg-transparent hover:text-blue-500
-        "
+        class="border-2 border-transparent bg-blue-500 py-2 px-4 font-bold uppercase text-white rounded transition-all hover:border-blue-500 hover:bg-transparent hover:text-blue-500"
       >
         Add User
       </button>
     </div>
   </div>
 </form>
+<svg-icon key="chevron" color="hotpink"></svg-icon>
+<svg-icon key="football" size="lg"></svg-icon>
+<svg-icon key="funnel" fontSize="100px"></svg-icon>
+<svg-icon key="game"></svg-icon>
