--- a/webapp/src/app/modules/users/components/user/user.component.html
+++ b/webapp/src/app/modules/users/components/user/user.component.html
@@ -1,32 +1,32 @@
 <div
   class="
-    card
-    border
-    w-96
-    hover:shadow-none
     relative
     flex flex-col
-    rounded
-    mx-auto
-    shadow-lg
     m-5
+    mx-auto
+    border
+    rounded
+    shadow-lg
+    card
+    w-96
+    hover:shadow-none
   "
 >
   <img
-    class="max-h-20 w-full opacity-80 absolute top-0 rounded-t"
+    class="absolute top-0 w-full rounded-t max-h-20 opacity-80"
     style="z-index: -1"
     [src]="'https://picsum.photos/400/100?' + user.name"
     alt=""
   />
-  <div class="profile w-full flex m-3 ml-4 text-white">
+  <div class="flex w-full m-3 ml-4 text-white profile">
     <img
-      class="w-28 h-28 p-1 bg-white rounded-full"
+      class="p-1 bg-white rounded-full w-28 h-28"
       [src]="'https://i.pravatar.cc/150?' + user.name"
       alt=""
     />
-    <div class="title mt-11 ml-3 font-bold flex flex-col">
-      <div class="name break-words">{{ user.name }}</div>
-      <div class="add font-semibold text-sm italic text-gray-400">
+    <div class="flex flex-col ml-3 font-bold title mt-11">
+      <div class="break-words name">{{ user.name }}</div>
+      <div class="text-sm italic font-semibold text-gray-400 add">
         {{ user.profession }}
       </div>
     </div>
@@ -47,22 +47,22 @@
   >
     <button
       class="
-        border-2 border-transparent
-        bg-red-500
-        py-1
         px-2
+        py-1
         font-bold
-        uppercase
         text-white
-        rounded
+        uppercase
         transition-all
+        bg-red-500
+        border-2 border-transparent
+        rounded
         hover:border-red-500 hover:bg-transparent hover:text-red-500
       "
       (click)="removeUser()"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        class="h-6 w-6"
+        class="w-6 h-6"
         fill="none"
         viewBox="0 0 24 24"
         stroke="currentColor"
